bin/tests/snapshots/deprecated_to_path__174dc0d1d9e78fd30b854475b82a9917_lint.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath "/some/path"
---
[17] Warning: Found usage of deprecated builtin toPath
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ builtins.toPath "/some/path"
   │ ──────────────┬─────────────  
   │               ╰─────────────── builtins.toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
