bin/tests/snapshots/deprecated_to_path__174dc0d1d9e78fd30b854475b82a9917_lint_json.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath "/some/path"
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "deprecated_to_path",
      "note": "Found usage of deprecated builtin toPath",
      "code": 17,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 29
            }
          },
          "message": "`builtins.toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
