bin/tests/snapshots/deprecated_to_path__4f2c5321b7dbd2171c77729c879745a1_lint.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath x
---
[17] Warning: Found usage of deprecated builtin toPath
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ toPath x
   │ ────┬───  
   │     ╰───── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
