bin/tests/snapshots/deprecated_to_path__4f2c5321b7dbd2171c77729c879745a1_lint_errfmt.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath x
---
<temp_file_path>>1:1:W:17:`toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more
