bin/tests/snapshots/deprecated_to_path__4f2c5321b7dbd2171c77729c879745a1_lint_json.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath x
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "deprecated_to_path",
      "note": "Found usage of deprecated builtin toPath",
      "code": 17,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 9
            }
          },
          "message": "`toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
