bin/tests/snapshots/deprecated_to_path__b7ca5bc4bbe1fe57468d47f2df8fac29_lint.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath x
---
[deprecated_to_path] Warning: Found usage of deprecated builtin toPath
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ builtins.toPath x
   │ ────────┬────────  
   │         ╰────────── builtins.toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
