bin/tests/snapshots/deprecated_to_path__b7ca5bc4bbe1fe57468d47f2df8fac29_lint_errfmt.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath x
---
<temp_file_path>>1:1:W:17:`builtins.toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more
