bin/tests/snapshots/deprecated_to_path__b7ca5bc4bbe1fe57468d47f2df8fac29_lint_json.snap
---
source: bin/tests/deprecated_to_path.rs
---
builtins.toPath x
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "deprecated_to_path",
      "note": "Found usage of deprecated builtin toPath",
      "code": 17,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 18
            }
          },
          "message": "`builtins.toPath` is deprecated, see `:doc builtins.toPath` within the REPL for more",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
