bin/tests/snapshots/deprecated_to_path__babcf3ca5fe7ee69b692a0e6ccfbfdf4_lint.snap
---
source: bin/tests/deprecated_to_path.rs
---
toPath "/abc/def"
---
[17] Warning: Found usage of deprecated builtin toPath
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ toPath "/abc/def"
   │ ────────┬────────  
   │         ╰────────── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
